<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en-rUS">
    <string name="repo" translatable="false">rebelonion/Dantotsu</string>
    <string name="preference_file_key" translatable="false">dantotsuprefs</string>
    <string name="app_name" translatable="false">Dantotsu</string>
    <string name="slogan">The NEW Best Anime &amp; Manga app for Android.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="dantotsu" translatable="false">https://dantotsu.app/</string>
    <string name="discord" translatable="false">https://discord.gg/4HPZ5nAWwM</string>
    <string name="github" translatable="false">https://github.com/rebelonion/Dantotsu</string>
    <string name="telegram" translatable="false" tools:ignore="Typos">https://t.me/+gzBCQExtLQo1YTNh </string>
    <string name="coffee" translatable="false">https://www.buymeacoffee.com/rebelonion</string>
    <string name="anilist_link">https://anilist.co/user/%1$s/</string>
    <string name="myanilist_link">https://myanimelist.net/profile/%1$s/</string>
    <string name="discord_link">https://discord.com/users/%1$s/</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="novels">Novels</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="language">Language</string>
    <string name="language_code" translatable="false">LANG</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="sad">X(</string>
    <string name="oh">:o</string>
    <string name="colon">" : "</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>New Releases</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Pure pain</item>
    </string-array>
    <string name="genre">Genre</string>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>
    <string name="username">Username</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="chapters_read_n">Chapters\nRead</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="episodes_watched_n">Episodes\nWatched</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string-array name="keys">
        <item>Reading</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>Paused</item>
        <item>Dropped</item>
        <item>Planning</item>
        <item>Favourites</item>
        <item>Rewatching</item>
        <item>Rereading</item>
        <item>All</item>
    </string-array>
    <string name="nothing_here">Nothing here</string>
    <string name="followers">Followers</string>
    <string name="write_a_message">Write a Message</string>
    <string-array name="status" translatable="false">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_anime">
        <item>PLANNING</item>
        <item>WATCHING</item>
        <item>COMPLETED</item>
        <item>RE-WATCHING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_manga">
        <item>PLANNING</item>
        <item>READING</item>
        <item>COMPLETED</item>
        <item>RE-READING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="episodes"> Episode(s)</string>
    <string name="chapters"> Chapter(s)</string>
    <string name="total_divider"> | %1$s</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="staff">Staff</string>
    <string name="favourites">Favourites</string>
    <string name="popularity">Popularity</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Nothing came up from this source.\n
        Let\'s look elsewhere.
    </string>
    <string name="download_not_found">
        Your downloads are feeling a bit lonely…\n
        Try downloading something.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="adult">Adult</string>
    <string name="list_only">List Only</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="anilist_settings">Anilist Settings</string>
    <string name="extension_settings">Extensions</string>
    <string name="downloads">Downloads</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="settings">Settings</string>
    <string name="extensions">Extensions</string>
    <string name="extension_updates_available">Extension updates available</string>
    <string name="player_settings">Player Settings</string>
    <string name="recentlyListOnly">Only show my content in \"Recently Updated\"</string>
    <string name="download_manager_select">Download Manager</string>
    <string name="downloadInSd">Download in SD card</string>
    <string name="noSdFound">No SD card was Found.</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="default_source">Default Source</string>
    <string name="show_yt">Youtube Link</string>
    <string name="default_ep_view">Default Episode Layout</string>
    <string name="default_chp_view">Default Chapter Layout</string>
    <string name="ui">User Interface</string>
    <string name="common">Common</string>
    <string name="theme">Theme</string>
    <string name="ui_settings">UI Settings</string>
    <string name="about">About</string>
    <string name="desc">"    Dantotsu is crafted from the ashes of Saikou and based on simplistic yet state-of-the-art elegance. It is an Anilist only client, which also lets you stream-download Anime through extensions &amp; Manga.\nDantotsu literally means the \"best of the best\" in japanese. Well, we would like to say this is the best open source app for anime and manga on Android, what would you say?"</string>
    <string name="devs">Developers/Helpers</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_widget">Add widget</string>
    <string name="manga_queue">Manga Queue (WIP)</string>
    <string name="anime_queue">Anime Queue (WIP)</string>
    <string name="profile_stats_widget">Track progress directly from your home screen</string>
    <string name="anime_watched">Anime\nWatched</string>
    <string name="manga_read">Manga\nRead</string>
    <string name="users">Users</string>
    <string name="app_died">APP DIED</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred.\nPlease send a crash report to the developer :)</string>
    <string name="copy_report">Copy Report</string>
    <string name="ping">Ping</string>
    <string name="basic">Basic</string>
    <string name="full">Full</string>
    <string name="test_type">Test Type</string>
    <string name="extension_type">Extension Type</string>
    <string name="add_repository">Add Repository</string>
    <string name="add_repository_desc">A repository link should look like this: https://raw.githubusercontent.com/username/repo/branch/index.min.json\nOr: username/repo/branch</string>
    <string name="current_repositories">Current Repositories</string>
    <string name="studios">Studios</string>
</resources>