<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/extension_type"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/animeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/anime"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mangaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/manga"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/novelsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novels"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/test_type"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/pingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/ping"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/basicRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/basic"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/fullRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/extensionSelectionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        tools:listitem="@layout/item_extension_select"/>

</LinearLayout>