<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/refreshContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:tabContentStart="32dp"
            app:tabGravity="fill"
            app:tabPaddingEnd="16dp"
            app:tabPaddingStart="16dp"
            app:tabTextAppearance="@style/NavBarText">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_queue" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manga_queue" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/noInternetSad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/sad"
                android:textColor="?attr/colorPrimary"
                android:textSize="64sp"/>

            <TextView
                android:id="@+id/no_internet"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/no_internet"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"/>
        </LinearLayout>

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="128dp"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:text="@string/refresh"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_round_refresh_24" />
    </FrameLayout>

</FrameLayout>