<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/addRepositoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_repository"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addRepositoryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_repository_desc"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/repositoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:imeOptions="actionDone"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>

    <TextView
        android:id="@+id/currentRepositoriesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_repositories"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repositoriesRecyclerView"
        tools:listitem="@layout/item_repo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>