<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:fontFamily="@font/poppins_bold"
        android:textSize="17sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/animeSearch"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/anime"
        android:textSize="17sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/mangaSearch"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/manga"
        android:textSize="17sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/userSearch"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/users"
        android:textSize="17sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/characterSearch"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/characters"
        android:textSize="17sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/staffSearch"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/staff"
        android:textSize="17sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/studioSearch"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/studios"
        android:textSize="17sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp" />

</LinearLayout>