<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/profile_stats_widget" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/widgetOptionAnimeWatched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:drawableStart="@drawable/ic_round_video_library_24"
        android:drawablePadding="16dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/poppins_bold"
        android:minHeight="64dp"
        android:text="@string/anime_watched"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp"
        app:drawableTint="?attr/colorPrimary"
        app:showText="false"
        app:thumbTint="@color/button_switch_track" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/widgetOptionEpisodesWatched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:drawableStart="@drawable/ic_camera_roll_24"
        android:drawablePadding="16dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/poppins_bold"
        android:minHeight="64dp"
        android:text="@string/episodes_watched"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp"
        app:drawableTint="?attr/colorPrimary"
        app:showText="false"
        app:thumbTint="@color/button_switch_track" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/widgetOptionMangaRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:drawableStart="@drawable/ic_round_source_24"
        android:drawablePadding="16dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/poppins_bold"
        android:minHeight="64dp"
        android:text="@string/manga_read"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp"
        app:drawableTint="?attr/colorPrimary"
        app:showText="false"
        app:thumbTint="@color/button_switch_track" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/widgetOptionChaptersRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:drawableStart="@drawable/ic_page_numbering"
        android:drawablePadding="16dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/poppins_bold"
        android:minHeight="64dp"
        android:text="@string/chapters_read"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="0dp"
        app:drawableTint="?attr/colorPrimary"
        app:showText="false"
        app:thumbTint="@color/button_switch_track" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>